# course_paper

./: .env_template  README.md  pyproject.toml
src/: external_api.py  reports.py  services.py  transaction_parser.py  utils.py  views.py
src/reports/: report_spending_by_weekday_20241103155425.json
tests/: test_external_api.py  test_reports.py  test_services.py  test_transaction_parser.py  test_utils.py  test_views.py
